netpols/ingress.tc-agent-keystore.restrict.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: restrict-keystore-ingress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: tc-agent
      app.kubernetes.io/component: keystore
  policyTypes: [ Ingress ]
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: tc-agent
          app.kubernetes.io/component: app
    ports:
    - port: 6379
      protocol: TCP
